# hooking

./: .gitignore  Makefile.am  README  api.vala  arc_handler.vala  configure.ac  hooking.vala  message_routing.vala  propagation_coord.vala  proxy_coord.vala  rngen.vala  serializables.vala  structs.vala
testsuites/scripts/: first  graph  graph1  second  two_gnodes_meet  two_nodes_meet
testsuites/system_peer/: comm_local_socket.vala  comm_serialization.vala  comm_skeleton_factory.vala  comm_stub_factory.vala  hooking_helpers.vala  hooking_signals.vala  rngen.vala  serializables.vala  system_peer.vala  task_addtag.vala  task_check_graph1.vala  task_check_something.vala  task_check_two_gnodes_meet.vala  task_check_two_nodes_meet.vala  task_coord_data.vala  task_gateways.vala  task_identities.vala  task_identity_data.vala  task_modules.vala
testsuites/system_peer/rpc/: module_stubs.vala  skeleton_factory.vala  stub_factory.vala
testsuites/test_serializables/: serializables.vala  test_serializables.vala
